inno-microservices/k8s-manifests/base/apiGateway/serviceApi.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-api
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
